04-built-in-resource-types/Ingress/Ingress.minimal-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-nginx
  # Can use
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: "ingress-example-nginx.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-nodeport
                port:
                  number: 80
# kubectl run curl-pod -it --rm --image=curlimages/curl --command -- sh
# curl -H "Host: ingress-example-nginx.com" <node_ip>:<node_port>
# -H to specify the host header
# <node_ip>: is the IP of the node where the Ingress controller is running
# <node_port>: is the NodePort of the Ingress controller
